# py-sv-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
python/svparser/: __init__.py  __init__.pyi  bindings.py  bindings.pyi  lib.py
src/: defines.rs  iterators.rs  lib.rs  tree.rs
