[package]
name = "py_sv_parser"
version = "0.2.0"
authors = ["David Lenfesty <david.lenfesty@eideticom.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sv-parser = "0.9.0"
sv-parser-pp = "0.9.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
