[package]
name = "svparser"
version = "0.4.0"
authors = [
        "David Lenfesty <david.lenfesty@eideticom.com>",
        "Sunil Pai <sunilkpai93@gmail.com>"
]
edition = "2018"
description = "Python bindings for SystemVerilog parsing."
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
maturin = "1.3.0"
sv-parser = "0.13.1"
sv-parser-pp = "0.13.1"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
